@@ -44,6 +44,11 @@
       <table border="0" width="90%" align="center" cellpadding=3 cellspacing=3>
 
        <tr>
+	    <td>June 26, 2002</td>
+        <td><a href="press/pr-gnome20.html">GNOME 2.0 Released: Desktop Environment Boasts Simpler User Interface and a Host of Powerful Developer Tools</a></td>
+       </tr>
+
+       <tr>
 	    <td>June 24, 2002</td>
         <td><a href="press/pr-gnomeenelsur.html">Miguel de Icaza goes on GNOME Foundation's First Latin American Roadshow</a></td>
        </tr>
