@@ -1,0 +1,164 @@
+<!doctype html public "-//w3c//dtd html 4.0 transitional//en">
+<html>
+ <head>
+  <title>The GNOME Foundation: GNOME 2.0 Released</title>
+ </head>
+ <body bgcolor="#FFFFFF">
+  <center>
+   <table BORDER=2 CELLPADDING=5 WIDTH="595" NOSAVE >
+    <tr VALIGN=TOP NOSAVE>
+     <td VALIGN=TOP NOSAVE>
+      <center>
+       <a href="http://www.gnome.org">
+       <img SRC="../gnome.jpg" ALT="" height=250 width=198 border=0></a><img
+       SRC="../text.png" ALT="The GNOME Foundation" height=198 width=354>
+      </center>
+     </td>
+    </tr>
+
+    <tr>
+     <td>
+      <center>
+       <a href="../index.html">Home</a> :&nbsp;
+       Press :&nbsp;
+       <a href="../organization.html">Organization</a> :&nbsp;
+       <a href="../documentation.html">Documentation</a> :&nbsp;
+       <a href="../membership.html">Membership</a> :&nbsp;
+       <a href="../elections.html">Elections</a> :&nbsp;
+       <a href="../directory.html">Directory</a>
+      </center>
+      <br>
+      <center>
+       <a href="../press.html">[Other Press Releases]</a>
+      </center>
+     </td>
+    </tr>
+
+    <!-- End of Boilerplate -->
+
+    <tr>
+     <td>
+
+      <h3 align="center">GNOME 2.0 DESKTOP AND DEVELOPER PLATFORM RELEASED</h3>
+
+	  <p><b>Latest version of the popular, multi-platform desktop environment boasts
+		  simpler user interface and a host of powerful developer tools.</b></p>
+
+<pre>
+OTTAWA, Canada  - June 26, 2002 - The GNOME Foundation today released
+version 2.0 of the GNOME Desktop and Developer Platform at the Ottawa
+Linux Symposium.  With the inclusion of GNOME 2.0 by leading Linux and
+Unix vendors later this year, users of GNOME can look forward to an
+improved user environment for existing GNOME applications, including a
+faster and more powerful Nautilus file manager, features that are better
+organized and usability-tested, dozens of useful utilities, applications
+and even games.  Users and administrators will also see a new,
+simplified configuration system. Developers can look forward to more
+efficient application development with stronger integration of GNOME
+APIs and the advantages of GNOME's component-based architecture.
+
+"The GNOME 2.0 project is the culmination of a major effort which had
+the dual objectives of dramatically improving developer productivity and
+significantly enhancing the GNOME user experience," said Miguel de
+Icaza, president of the GNOME Foundation and CTO and co-founder of
+Ximian, Inc.  "The result is an elegant, new multi-platform desktop
+environment for individual, corporate and government users worldwide."
+
+GNOME is supported on a variety of platforms, including GNU/Linux (more
+commonly referred to as Linux), Solaris (tm) Operating Environment,
+HP-UX, Unix, BSD and Apple's Darwin.  The enhanced user interface moves
+from a traditional X Window System interface to one that is easy to use
+and familiar to users of other environments.  The user interface also
+boasts powerful features such as high-quality smooth text rendering and
+first class internationalization support, including support for
+bi-directional text.  
+
+"Developing on the GNOME platform will take a leap forward with the
+release of 2.0," said Havoc Pennington, GNOME Foundation board chair and
+technical lead for desktop engineering at Red Hat, Inc.  "The
+industrial-strength GTK+ 2.0 toolkit, combined with add-on tools such as
+Glade, Python and our CORBA implementation make GNOME the natural choice
+for developers on a variety of platforms.  GNOME's component-based
+architecture makes it possible for developers to use already existing
+tools, libraries and features, cutting development time significantly."
+
+GNOME 2.0 has a host of advanced accessibility features for users with
+disabilities and a built-in accessibility framework for developers to
+meet Section 508 requirements.  Developers of GNOME 2.0 have devoted
+thousands of man-hours to ensuring that GNOME will be accessible to
+everyone, including people with disabilities.  More features and
+enhanced accessibility capabilities will be added later this year.
+
+GNOME 2.0 boasts some significant advances for developers, including an
+enhanced GTK Toolkit, new libraries and widgets, as well as the
+unparalleled advantages of GNOME's component-based architecture. 
+GNOME's libraries are available for use in any application, without
+fees, under the terms of the GNU Lesser General Public License.
+
+GNOME 2.0 is the first of the GNOME 2.x series.  Future releases will
+bring more features to the core desktop, while adding GNOME 2 native
+versions of popular applications such as Evolution, Galeon, Mozilla and
+Gnumeric.  
+
+Availability
+Developers and users wishing to install the GNOME 2.0 Desktop and
+Developer Platform may freely download the software at www.gnome.org. 
+The software includes the GNOME 2.0 desktop interface, file manager,
+menus and utilities, as well as the complete set of development tools
+and libraries.
+
+GNOME 2.0 versions of popular applications will be available later this
+year. GNOME 2.0 will be available later this year on the Solaris (tm)
+Operating Environment, HP-UX and Red Hat Linux, as well as being
+distributed by Ximian and other Linux distributions as part of their
+offerings.  
+
+About GNOME
+GNOME is a free software project that is developing a complete, easy to
+use desktop for Linux-based operating systems, BSD and a variety of
+other Unix and Unix-like operating systems.  The GNOME desktop is used
+by millions of people around the world.  More than 500 computer
+developers, including over 100 full-time, paid developers, contribute
+their time and effort to the project.
+
+About the GNOME Foundation
+Comprised of hundreds of volunteer developers and industry-leading
+companies, the GNOME Foundation is an organization committed to
+supporting the advancement of GNOME. The Foundation is a member
+directed, non-profit organization that provides financial,
+organizational and legal support to the GNOME project and helps
+determine its vision and roadmap. GNOME is an entirely free user
+environment for desktops, networked servers and portable Internet
+devices.  The modern architecture and design of GNOME includes a
+technically advanced application development platform and a powerful
+end-user desktop environment.  Major leading software industry and
+computer manufacturers support the GNOME development effort, which is
+led by a worldwide community of volunteers.  More information on GNOME
+is available at www.gnome.org.
+
+LINUX is a trademark of Linus Torvalds.  RED HAT is a registered
+trademark of Red Hat, Inc.  All other names and trademarks are the
+property of their respective owners.
+
+
+#  #  #
+</pre>
+
+     </td>
+    </tr>
+
+    <!-- Start of Boilerplate -->
+    <tr>
+     <td>
+      <center><font size=-1>This site is maintained by
+      <a href="mailto:membership@gnome.org">the GNOME Foundation Membership and Elections Committee</a>
+      and was designed by <a href="mailto:jpsc@users.sourceforge.net">JP
+      Schnapper-Casteras</a> and <a href="mailto:bart@eazel.com">Bart Decrem</a>.</font></center>
+     </td>
+    </tr>
+   </table>
+  </center>
+
+ </body>
+</html>
+
