@@ -1,3 +1,10 @@
+2002-06-26 Steve Fox <drfickle@uberh4x0r.org>
+
+	* press.html
+	* press/pr-gnome20.html
+
+	Add 2.0 announce
+
 2002-06-25 Steve Fox <drfickle@uberh4x0r.org>
 
 	* membership-list.html
